# ipytone

./: .coveragerc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  codecov.yml  environment-dev.yml  environment.yml  install.json  ipytone.json  jupyterlite_config.json  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  lint.yml  pypipublish.yml  test.yml
docs/: Makefile  advanced.md  api-hidden.rst  api.rst  audio_samples.md  conf.py  demo.rst  envelope_data1.npy  envelope_data2.npy  environment-jupyterlite.yml  environment.yml  getting_started.md  index.rst  installing.rst  instrument.md  jupyterlite_config.json  make.bat  observe_link.md  observe_link_audio.md  quick_demo.ipynb  release_notes.rst  scheduling.md  timeline.md  user_guide.rst
docs/_templates/: ipytone-class-template.rst  ipytone-module-template.rst
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/examples/: basic_example.rst  getting_started.ipynb  getting_started.rst  index.rst
examples/: introduction.ipynb  oscillator.ipynb
ipytone/: __init__.py  _frontend.py  _version.py  analysis.py  base.py  callback.py  channel.py  core.py  dynamics.py  effect.py  envelope.py  event.py  example.py  filter.py  graph.py  instrument.py  ipytone.py  observe.py  serialization.py  signal.py  source.py  transport.py  utils.py
ipytone/nbextension/: __init__.py
ipytone/nbextension/static/: extension.js
ipytone/tests/: conftest.py  test_analysis.py  test_base.py  test_channel.py  test_core.py  test_dynamics.py  test_effect.py  test_envelope.py  test_event.py  test_example.py  test_filter.py  test_frontend.py  test_graph.py  test_instrument.py  test_ipytone.py  test_nbextension_path.py  test_observe.py  test_signal.py  test_source.py  test_transport.py  test_utils.py
src/: extension.ts  index.ts  plugin.ts  serializers.ts  utils.ts  version.ts  widget.ts  widget_analysis.ts  widget_base.ts  widget_channel.ts  widget_core.ts  widget_dynamics.ts  widget_effect.ts  widget_envelope.ts  widget_event.ts  widget_filter.ts  widget_graph.ts  widget_instrument.ts  widget_observe.ts  widget_signal.ts  widget_source.ts  widget_transport.ts
tests/src/: index.spec.ts
