[bdist_wheel]
universal=1

[metadata]
description-file = README.md
license_file = LICENSE.txt

[flake8]
exclude = docs
ignore = E203,E266,E501,W503,E722,E402,C901
per-file-ignores =
    ipytone/__init__.py:F401
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
known_first_party=ipytone
known_third_party=ipywidgets,traitlets
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=100
skip=
    setup.py

[tool:pytest]
testpaths =
    ipytone/tests
    examples
norecursedirs =
    node_modules
    .ipynb_checkpoints
