[bdist_wheel]
universal=1

[metadata]
description-file = README.md
license_file = LICENSE.txt

[flake8]
exclude = .git,docs,build,dist,__pycache__
ignore = E203,E266,E501,W503,E722,E402,C901
per-file-ignores =
    ipytone/__init__.py:F401
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9
